feat: Introduce photo story overlays, mood display, and particle effects, backed by new content fields.

--- a/src/content/photos/01.yaml
+++ b/src/content/photos/01.yaml
@@ -3,3 +3,5 @@ src: /images/photos/WechatIMG3004.jpg
 title: 杂记 1
 alt: 生活杂记照片
 publishDate: 2025-12-04
+story: 这是一个长按才会显示的小秘密！试试长按看看会发生什么 ✨
+mood: 😊 美好的一天
