feat: implement photo likes and comments functionality with Supabase integration

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@
 AI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxx
 AI_BASE_URL=https://api.openai.com/v1
 AI_MODEL=gpt-3.5-turbo
+
+# Supabase Configuration
+PUBLIC_SUPABASE_URL=your-project-url-here
+PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
