--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
+  "include": [
+    ".astro/types.d.ts",
+    "**/*"
+  ],
   "compilerOptions": {
     // Basic
     "allowJs": true,
     // Building for a library
     "declaration": true,
     // Code runs in the DOM
-    "lib": ["es2022", "dom", "dom.iterable"],
+    "lib": [
+      "es2022",
+      "dom",
+      "dom.iterable"
+    ],
     // Type Imports
     "verbatimModuleSyntax": true,
     // Others
@@ -15,16 +22,44 @@
     "strictNullChecks": true,
     // Paths
     "paths": {
-      "@/assets/*": ["src/assets/*"],
-      "@/components/*": ["src/components/*"],
-      "@/layouts/*": ["src/layouts/*"],
-      "@/utils": ["src/utils/index.ts"],
-      "@/utils/*": ["src/utils/*"],
-      "@/plugins/*": ["src/plugins/*"],
-      "@/pages/*": ["src/pages/*"],
-      "@/types": ["src/types/index.ts"],
-      "@/site-config": ["src/site.config.ts"]
+      "@/assets/*": [
+        "src/assets/*"
+      ],
+      "@/components/*": [
+        "src/components/*"
+      ],
+      "@/layouts/*": [
+        "src/layouts/*"
+      ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
+      "@/utils": [
+        "src/utils/index.ts"
+      ],
+      "@/utils/*": [
+        "src/utils/*"
+      ],
+      "@/plugins/*": [
+        "src/plugins/*"
+      ],
+      "@/pages/*": [
+        "src/pages/*"
+      ],
+      "@/types": [
+        "src/types/index.ts"
+      ],
+      "@/site-config": [
+        "src/site.config.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist", "public/scripts/*", "test/*"]
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*",
+    ".vscode",
+    "dist",
+    "public/scripts/*",
+    "test/*"
+  ]
 }
