--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "astro": "^5.16.0",
     "astro-pure": "1.3.7",
     "katex": "^0.16.25",
+    "medium-zoom": "^1.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.34.5",
