feat: add reading list page with data and navigation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,9 @@
       ],
       "@/site-config": [
         "src/site.config.ts"
+      ],
+      "@/data/*": [
+        "src/data/*"
       ]
     }
   },
